<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrangeCash</string>
    <string name="action_settings">Ustawienia</string>
    
    <string name="action_update">Aktualizuj</string>
    <string name="action_update_done">Dane zostały zaktualizowane</string>
    <string name="action_update_error">Błąd aktualizacji danych</string>
    
    <string name="action_clear">Usuń dane</string>
    <string name="action_clear_done">Dane zostały usunięte</string>
    
    <string name="tab_balance">Stan konta</string>
    <string name="tab_transactions">Transakcje</string>
    <string name="tab_info">Karta</string>
    
    <string name="balance_balance">Dostępne środki z dnia</string>
    
    <string name="info_feed_in_year">Suma zasileń w roku kalendarzowym</string>
    <string name="info_card_nr">Nr Karty mBank</string>
    <string name="info_card_valid_thru">Data ważności</string>
    <string name="info_card_type">Typ Karty</string>
    <string name="info_card_status">Status Karty</string>
    <string name="info_card_info_date">Aktualność danych</string>
    
    <string name="no_balance_data">Brak danych</string>
    
    <string name="tab_transactions_no_data">Brak transakcji</string>
    
</resources>
